Fix navbar spacing, add logo in navbar in desktop mode

--- a/styles.css
+++ b/styles.css
@@ -5,25 +5,36 @@
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 }
+
 body {
   background-color: #f5f5f7;
   overflow-x: hidden;
+  overflow-y: scroll;
+  position: static;
 }
 header {
-  display: block;
-  position: static;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw - 15px;
   height: 100vh;
 }
 h1 {
-  padding-top: 28vh;
-  padding-left: 1.2vw;
+  letter-spacing: .2vw;
+  padding: 0;
+  flex: 1;
   font-size: 12rem;
   color: #1d1d1f;
   text-align: center;
   text-shadow: 40rem 0 0#ce4b2a,-40rem 0 0#ce4b2a;
 }
-
+.navbar-items .logo {
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding: 0 8vw;
+  flex: 2 1 0px;
+  letter-spacing: .2vw;
+}
 .navbar {
   position: sticky;
   top: 0;
@@ -35,19 +46,22 @@ h1 {
 .navbar-items {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content:space-around;
 }
 
 .navbar-items > li {
+  flex: 1 1 0px;
   list-style-type: none;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 200;
+  padding: 0;
+  text-align: center;
 }
 
 .navbar-items > li > a {
   text-decoration: none;
   color: #1b1620;
-  padding: 1rem 3.5vw;
+  padding: 1rem 0;
 }
 .navbar-items > li > a:hover, a:active {
   color: #ce4b2a;
@@ -78,84 +92,106 @@ h1 {
   height: 100vh;
   background-color: #ce4b2a;
   color: #f5f5f7;
+  
 }
 .design-slider {
+  flex-direction: column;
   display: flex;
-  overflow-x: hidden;
+  overflow-x: scroll;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
- 
   height: 45vh;
   max-width: 90vw;
   width: 100%;
   transform-origin: center;
   background-color: white;
+  flex-wrap: wrap;
+  overflow-y: hidden;
+  
 }
-.design-slider > img {
+.design-slider > .imgdiv > img{
   width: 100%;
   height: 100%;
-  max-width: 22.5vw;
+  max-width: 100%;
   object-fit: contain;
   scroll-snap-align: center;
   scroll-snap-stop: always;
-  border: solid 2px #ce4b2a;
 }
-
+.imglabel {
+  text-align: end;
+  padding-right: .5rem;
+  z-index: 2;
+  position: static;
+  color: #1d1d1f;
+  font-size: 1rem;
+}
+.imgdiv {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 50%;
+  max-width: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
 h3 {
   padding-bottom: 2rem;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-weight: 100;
-}
-
-@keyframes arrow {
-  0% {
-    transform: scale(0.1);
-    top: 29vh;
-    opacity: 0%;
-  }
-  100% {
-    transform: scale(0.19);
-    top: 52vh;
-    opacity: 95%;
-  }
 }
 #arrow-header {
   position: absolute;
-    transform-origin: center;
-    left: 35%;
-    transform: scale(0.1);
-    animation: arrow 1.2s infinite ease-in-out;
-    opacity: 100;
+  top: 60%;
+  left: calc(50% - 25px);
+  border: solid #1d1d1f;
+  border-width: 0 1rem 1rem 0;
+  display: inline-block;
+  padding: 1rem;
+  color: #1d1d1f;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  animation: arrow 1.2s infinite ease-in-out;
+}
+@keyframes arrow {
+  0% {
+    top: 65%;
+    opacity: 0%;
+  }
+  100% {
+    top: 90%;
+    opacity: 95%;
+  }
 }
 
+
 @media only screen and (max-width:400px) {
+  body{
+    overflow-x: hidden;
+    overflow-y: visible;
+  }
   h1 {
     font-size: 6rem;
-    padding-top: 37vh;
     text-shadow: 0 6rem 0#ce4b2a12,0 -6rem 0#ce4b2a12, 0 12rem 0#ce4b2a12,0 -12rem 0#ce4b2a12, 0 18rem 0#ce4b2a12,0 -18rem 0#ce4b2a12, 0 24rem 0#ce4b2a12,0 -24rem 0#ce4b2a12;
   }
   .navbar-items > li {
-    padding: 0 4.5vw;
     list-style-type: none;
     font-size: 1.4rem;
     font-weight: 200;
+    text-align: center;
   }
   .navbar {
     padding: 4vh 0;
   }
-  #arrow-header {
-    position: absolute;
-    transform-origin: center;
-    left: -16vw;
-    transform: scale(0.1);
-    animation: arrow 1.2s infinite ease-in-out;
-    opacity: 100;
-  }
   .design-slider {
     overflow-x: scroll;
   }
-  .design-slider > img {
+  .design-slider > .imgdiv > img {
     max-width: 100vw;
+    border: none;
+  }
+  .logo {
+    display: none;
   }
 }
 
